# Snake_SDL

./: CMakeLists.txt  CMakeLists.txt~  README.md  SnakeConfig.h.in  TODO.txt  TODO.txt~
cmake/: specifySDLpaths.cmake
inc/: Food.h  Framework.h  Game.h  Menu.h  Player.h  Screen.h  Snake.h  Sprite.h  Tastatur.h  Timer.h
inc/tests/: MockFramework.h  MockGame.h  MockMenu.h  MockSnake.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt~  Food.cpp  Framework.cpp  Game.cpp  Menu.cpp  Player.cpp  Screen.cpp  Snake.cpp  Sprite.cpp  Tastatur.cpp  Timer.cpp  main.cpp
src/tests/: CMakeLists.txt  CollisionTest.cpp  FoodTest.cpp  GameTest.cpp  MockGame.cpp  MockSnake.cpp  PlayerTest.cpp  RigourSnakeTest.cpp  Sample.cpp  SnakeTest.cpp  SpriteTest.cpp  SystemTest.cpp
